Update and rename IMPORTANT.txt to README

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-Not=Projede kullanılan veriler datalar gerçek değildir,Teiaşa ait değildir.tamamen uydurmadır.
+Not=Projede kullanılan veriler datalar gerçek değildir ve Teiaşa ait değildir.Tamamen test amaçlıdır.
 My main working is views.py and url.py that ı wrote whole code myself without any internet or mentor help.
+
+Personel Management and staff control panel for TEİAŞ.
 
 Html side is I get help from internet or github and mostly stakoverflow for making flexable html page I said in my raport this tool like bootsrap w3school(ı get one temple from here for adding file)
 
